Day 3 re-written in sed and AWK

--- a/aoc20241203/Makefile
+++ b/aoc20241203/Makefile
@@ -1,3 +1,7 @@
+sedawk.out: full.sed full.awk
+	sed -f full.sed < input.txt | awk -f full.awk
+	./part2.pl < input.txt
+
 outfile.txt: part2.pl input.txt
 	./part2.pl < input.txt
 	./part2.pl < input.txt > outfile.txt
