Day 5 part 1 solution in Go

--- a/aoc20241205/Makefile
+++ b/aoc20241205/Makefile
@@ -1,6 +1,6 @@
+sample_out.txt: input.txt day5
+	./day5 < input.txt
+
 day5: day5.go
 	go build day5.go
 
-sample_out.txt: sample_in.txt day5
-	day5 < sample_in.txt
-	day5 < sample_in.txt > sample_out.txt
