--- a/aoc20241205/Makefile
+++ b/aoc20241205/Makefile
@@ -1,5 +1,5 @@
-sample_out.txt: input.txt day5
-	./day5 < input.txt
+sample_out.txt: day5
+	./day5 < sample_in.txt
 
 day5: day5.go
 	go build day5.go
